--- a/index.html
+++ b/index.html
@@ -11,6 +11,40 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <header>
+        <!-- <img src="./assets/img/header-img.jpg" alt=""> -->
+        <h1 id="header-title">Deco Plantas</h1>
+        <p id="header-parragraph">Plantas decorativas para el hogar</p>
+    </header>
+    <main>
+        <h2>Productos a la venta</h2>
+        <hr>
+        <div>
+            <img src="./assets/img/p1.jpg" alt="">
+            <div class="product-description">
+                <p>Planta 1:</p>
+                <p>Precio: $9.900</p>
+            </div>
+        </div>
+        <div>
+            <img src="./assets/img/p2.jpg" alt="">
+            <div class="product-description">
+                <p>Planta 2:</p>
+                <p>Precio: $9.900</p>
+            </div>
+        </div>
+        <div>
+            <img src="./assets/img/p3.jpg" alt="">
+            <div class="product-description">
+                <p>Planta 2:</p>
+                <p>Precio: $9.900</p>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <p>@decoplantas</p>
+    </footer>
+    <!-- Scripts -->
     <script src="./assets/script/index.js"></script>
 </body>
 </html>
